Closed
Bug 1763617
Opened 3 years ago
Closed 3 years ago
Crash in [@ nsDocShell::FirePageHideShowNonRecursive]
Categories
(Core :: DOM: Core & HTML, defect)
Tracking
()
RESOLVED
FIXED
101 Branch
People
(Reporter: sefeng, Assigned: smaug)
Details
(Keywords: crash)
Crash Data
Attachments
(1 file)
Maybe Fission related. (DOMFissionEnabled=1)
Crash report: https://crash-stats.mozilla.org/report/index/1f3442bf-de08-4a56-91a0-26aa10220219
Reason: EXCEPTION_ACCESS_VIOLATION_READ
Top 10 frames of crashing thread:
0 xul.dll nsDocShell::FirePageHideShowNonRecursive docshell/base/nsDocShell.cpp:1217
1 xul.dll std::_Func_impl_no_alloc<`lambda at /builds/worker/checkouts/gecko/docshell/base/BrowsingContext.cpp:2934:19', void, mozilla::dom::BrowsingContext*>::_Do_call
2 xul.dll mozilla::dom::BrowsingContext::PostOrderWalk docshell/base/BrowsingContext.cpp:1116
3 xul.dll mozilla::dom::BrowsingContext::DidSet docshell/base/BrowsingContext.cpp:2934
4 xul.dll mozilla::dom::syncedcontext::Transaction<mozilla::dom::BrowsingContext>::Apply docshell/base/SyncedContextInlines.h:209
5 xul.dll mozilla::dom::syncedcontext::Transaction<mozilla::dom::BrowsingContext>::CommitFromIPC docshell/base/SyncedContextInlines.h:201
6 xul.dll mozilla::dom::PContentChild::OnMessageReceived ipc/ipdl/PContentChild.cpp:14502
7 xul.dll mozilla::ipc::MessageChannel::DispatchMessage ipc/glue/MessageChannel.cpp:1964
8 xul.dll mozilla::TaskController::DoExecuteNextTaskOnlyMainThreadInternal xpcom/threads/TaskController.cpp:771
9 xul.dll nsThread::ProcessNextEvent xpcom/threads/nsThread.cpp:1195
A nullptr crash
Comment 1•3 years ago
|
||
Regression from bug 1697266? Looks like there's no null check on a GetPerformance method.
Assignee | ||
Updated•3 years ago
|
Assignee: nobody → bugs
Assignee | ||
Comment 2•3 years ago
|
||
Interestingly we have basically the same crash also in the old bfcache implementation
https://crash-stats.mozilla.org/report/index/2707bd1e-5638-49ad-9d9c-9709a0220411
Assignee | ||
Comment 3•3 years ago
|
||
Pushed by opettay@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/a5503ab9c9eb
GetPerformance may return null, so null-check it before use in bfcache, r=peterv
Comment 5•3 years ago
|
||
bugherder |
Status: NEW → RESOLVED
Closed: 3 years ago
status-firefox101:
--- → fixed
Resolution: --- → FIXED
Target Milestone: --- → 101 Branch
Updated•3 years ago
|
status-firefox100:
--- → wontfix
status-firefox99:
--- → wontfix
status-firefox-esr91:
--- → wontfix
You need to log in
before you can comment on or make changes to this bug.
Description
•