Bug 1763617, GetPerformance may return null, so null-check it before use in bfcache, r=peterv

Differential Revision: https://phabricator.services.mozilla.com/D143506